After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 636931 - Wrong split for region / city
Wrong split for region / city
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Date and Time
git master
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-12-10 01:35 UTC by Luca Ferretti
Modified: 2010-12-10 11:45 UTC
See Also:
GNOME target: 3.0
GNOME version: ---



Description Luca Ferretti 2010-12-10 01:35:31 UTC
... at least in Italian language. The region combo should list the following items: "Oceano Pacifico" (for Pacific), "Oceano Indiano" (for Indian) and "Oceano Atlantico" (for Atlantic).

Instead the region combo simply shows "Oceano" tree times, moving the second word of each in city combo (showing "Atlantico/Azzorre", "Atlantico/Bermuda" and so on).

The issue should be related to space character in region label, but a further investigation is needed. For instance, "Faer Oer" inside Atlantic region is showed without "Atlantico/" prefix :|  I'll check for actual Italian translations.
Comment 1 Bastien Nocera 2010-12-10 01:41:48 UTC
Seems that the g_strsplit_set() function isn't wchar compatible, so passing it unicode characters might have it split spaces instead of "/".

Either it's a bug in my conversion from the Python code, or g_strsplit_set() really has a bug with wide-characters (which I wouldn't really expect it to support anyway).

The short-term work-around might be to use only "/" as the split character, and add a check target for the .po files to make sure we exchange other types of "obliques" for an ASCII "/".
Comment 2 Bastien Nocera 2010-12-10 11:45:06 UTC
commit a5187c3a63c2cef3ea52509f87611b95c690f120
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Dec 10 11:40:04 2010 +0000

    datetime: Fix timezone splitting
    
    Correct the C-version of the UTF-8 characters, so that we don't
    split on spaces as happened with the Italian translations.
    
    Also make sure we remove underscores in both the city and the region
    parts of the timezone name.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=636931