datetime: Fix timezone splitting

Correct the C-version of the UTF-8 characters, so that we don't
split on spaces as happened with the Italian translations.

Also make sure we remove underscores in both the city and the region
parts of the timezone name.

https://bugzilla.gnome.org/show_bug.cgi?id=636931